--- a/app-client/package.json
+++ b/app-client/package.json
@@ -17,11 +17,13 @@
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@material-extended/mde": "^2.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
