--- a/app-client/package.json
+++ b/app-client/package.json
@@ -31,6 +31,8 @@
     "json-server": "^0.16.3",
     "jw-angular-pagination": "^1.2.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-material-rating": "^2.0.0",
+    "ngx-range": "^1.1.0",
     "ngx-skltn": "^1.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
