--- a/app-client/package.json
+++ b/app-client/package.json
@@ -27,6 +27,7 @@
     "@okta/okta-angular": "^3.2.2",
     "@okta/okta-signin-widget": "^5.9.0",
     "@types/google.maps": "^3.45.6",
+    "angularx-qrcode": "^2.1.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
