--- a/app-client/angular.json
+++ b/app-client/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "./node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css"
+              "./node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
