--- a/app-client/package.json
+++ b/app-client/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
+    "@angular/animations": "^8.1.3",
     "@angular/cdk": "~8.2.2",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
@@ -37,6 +37,7 @@
     "ngx-material-rating": "^2.0.0",
     "ngx-range": "^1.1.0",
     "ngx-skltn": "^1.0.8",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
